[ACCUEIL] Correction du gap dans le carrousel

--- a/front/src/_page-accueil.scss
+++ b/front/src/_page-accueil.scss
@@ -99,8 +99,11 @@
       scroll-behavior: smooth;
 
       @include a-partir-de(md) {
-        gap: 1.5rem;
         justify-content: center;
+      }
+
+      @include a-partir-de(lg) {
+        gap: 1.5rem;
       }
 
       dsfr-card {
